c_prototypes.h

void koota_min_real4(void * invec, void * inoutvec, size_t len);
void koota_max_real4(void * invec, void * inoutvec, size_t len);
void koota_sum_real4(void * invec, void * inoutvec, size_t len);
void koota_prod_real4(void * invec, void * inoutvec, size_t len);
void koota_band_real4(void * invec, void * inoutvec, size_t len);
void koota_bor_real4(void * invec, void * inoutvec, size_t len);
void koota_bxor_real4(void * invec, void * inoutvec, size_t len);
void koota_land_real4(void * invec, void * inoutvec, size_t len);
void koota_lor_real4(void * invec, void * inoutvec, size_t len);
void koota_lxor_real4(void * invec, void * inoutvec, size_t len);
void koota_min_real8(void * invec, void * inoutvec, size_t len);
void koota_max_real8(void * invec, void * inoutvec, size_t len);
void koota_sum_real8(void * invec, void * inoutvec, size_t len);
void koota_prod_real8(void * invec, void * inoutvec, size_t len);
void koota_band_real8(void * invec, void * inoutvec, size_t len);
void koota_bor_real8(void * invec, void * inoutvec, size_t len);
void koota_bxor_real8(void * invec, void * inoutvec, size_t len);
void koota_land_real8(void * invec, void * inoutvec, size_t len);
void koota_lor_real8(void * invec, void * inoutvec, size_t len);